--- a/css/pages/events.css
+++ b/css/pages/events.css
@@ -1,17 +1,18 @@
 
 .main-event-cards{
-  background: var(--light-blue);
-  border-radius: 8px;
+  background: var(--secondary-color);
+  border-radius: 0.5rem;
   padding: 1rem;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-  /* margin: 1rem 0.5rem; */
   height: 100%;
-
   img {
     width: 100%;
     height: 290px;
   }
   p{
-    margin-bottom: 5px;
+    margin-bottom: 0.5rem;
   }
+}
+.col-md-6{
+  margin-bottom: 1.5rem;
 }
