--- a/css/pages/gallery.css
+++ b/css/pages/gallery.css
@@ -1,22 +1,13 @@
 
-.main-gallery-cards{
-  background: var(--light-blue);
-  border-radius: 8px;
-  padding: 1rem;
-  margin:1rem 0;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-  min-height: 410px;
-  
-  img {
-    width: 100%;
-    height: 290px;
-  }
+  .main-gallery-cards {
+    background: var(--light-blue);
+    border-radius: 8px;
+    padding: 1rem;
+    margin: 0.75rem 0;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    height: 24rem;
+
   h3{
     margin: 0;
   }
-}
-.nav-tabs .nav-link.active {
-  color: #fff !important;
-  background-color: #1c1c1c;
-  border-color: none !important;
 }
