our ministers doe

--- a/css/pages/career.css
+++ b/css/pages/career.css
@@ -3,6 +3,7 @@
   background-color: #fff;
   border-radius: 8px;
   padding: 1rem 1.5rem;
+  margin-bottom: 1rem;
 }
 .job-post-card:hover{
   border: 1px solid #1351D8;
@@ -13,7 +14,7 @@
   margin-bottom: 1rem;
 }
 .job-post-card__title{
-font-size: 1.5rem;
+font-size: 1.25rem;
 font-weight: 600;
 letter-spacing: 0.56px;
 }
@@ -60,18 +61,30 @@ letter-spacing: 0.56px;
   height: 2rem;
   width: 2rem;
 }
-/* .career-tabs  .item {
-  margin-bottom: 25px;
-  height: -moz-calc(100% - 25px);
-  height: -webkit-calc(100% - 25px);
-  height: calc(100% - 25px);
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
+.tabs-aligment {
+  text-align: right;
 }
-.career-tabs  .item img {
-  object-fit: cover;
-  height: 333px;
-} */
+.career-tabs{
+  padding: 1rem;
+  border: none;
+  display: inline-flex;
+  background: #fff;
+  border-radius: 0.5rem;
+}
+@media (max-width: 568px) {
+  .job-apply-btn{
+    font-size: 0.75rem;
+    padding: 0.75rem 1rem;
+  }
+  .job-close-btn{
+    font-size: 0.75rem;
+    padding: 0.75rem 1rem;
+    background-color: #C60609;
+  }
+  .tabs-aligment{
+    text-align: center;
+  }
+}
+
+
+
