--- a/css/pages/ism-commitee.css
+++ b/css/pages/ism-commitee.css
@@ -8,7 +8,9 @@
   border-radius: 0.5rem;
   align-content: center;
 }
-
+.ism-cards:hover {
+  border: 1px solid #192f60;
+}
 .ism-cards_box {
   display: flex;
   align-items: center;
