--- a/css/pages/useful-links.css
+++ b/css/pages/useful-links.css
@@ -1,9 +1,3 @@
-.ismv3-intro-banner{
-  background-image: url(../../images/banners/useful-links-banner.webp);
-  background-position: center;
-  background-size: cover;
-  height: 25vh;
-}
 
 .ism-elem7__box.logo-box {
   min-height: 150px;
@@ -46,6 +40,9 @@
   border-radius: 8px;
   word-wrap: break-word;
   box-shadow: 0 4px 25px rgba(34, 86, 102, 0.07);
+}
+.ism-elem7__box:hover {
+  border: 1px solid #192f60;
 }
 .ism-elem7__box .caption {
   position: absolute;
