--- a/style.css
+++ b/style.css
@@ -302,8 +302,11 @@ btn:hover {
     width:30px;
     margin-right: 0.5rem;
   }
+ 
 }
-
+.event-cards:hover{
+  border: 1px solid #192f60;
+}
 .event-content {
   font-family: Poppins;
   font-style: normal;
@@ -383,7 +386,7 @@ btn:hover {
 }
 .notification-text {
   font-size: 14px;
-  width: 85%;
+  width: 90%;
 }
 
 .notification-date {
@@ -444,7 +447,7 @@ iframe {
 }
 
 .nav-pills .nav-link {
-  padding: 15px 22px;
+  padding: 20px;
   /* border: 1px solid #192F60;
   border-radius: 92px !important; */
 }
