--- a/css/pages/our-ministers.css
+++ b/css/pages/our-ministers.css
@@ -20,6 +20,7 @@
   justify-content: center;
   -ms-flex-pack: center;
   flex-wrap: nowrap;
+  column-gap: 1rem;
 }
 .ism-generic_tabbing .nav-tabs {
   border-bottom: none;
@@ -129,6 +130,9 @@ strong{
 }
 .archieve-icon{
   height:40px; width:40px;margin-right: 10px;
+}
+.navs{
+  height: auto;
 }
 
 @media (max-width: 568px) {
