--- a/css/pages/career.css
+++ b/css/pages/career.css
@@ -12,6 +12,7 @@
   color: var(--primary-color);
   font-weight: 500;
   margin-bottom: 1rem;
+  margin-right: 1rem;
 }
 .job-post-card__title{
 font-size: 1.25rem;
@@ -42,7 +43,9 @@ letter-spacing: 0.56px;
   border-radius: 99px;
   background-color: #C60609;
 }
-
+.job-close-btn:hover{
+  background-color: #C60609;
+}
 .nav-tabs .nav-link.active {
   color: #fff !important;
   background-color: #1c1c1c;
