--- a/style.css
+++ b/style.css
@@ -139,7 +139,13 @@ p {
 .scheme-section {
   background: #F3F6FD;
 }
-
+.ism-hw-2_subText{
+  color: #1C1C1C;
+  font-size: 1.25rem;
+  font-weight: 600;
+  letter-spacing: 0.4px;
+  font-family: poppins;
+}
 .timeline-section {
   background-image: url(./images/backgrounds/timeline_bg.webp);
   background-size: cover;
@@ -492,7 +498,7 @@ footer ul li a img {
 }
 
 .ism-footer-logo-link img {
-  width: 55%;
+  width: 70%;
   height: auto;
 } 
 
@@ -719,10 +725,13 @@ footer ul li a img {
   display: none;
 }
 
-.ism-footer-iframe2{
+.ism-footer-iframe2 img{
   background-color: #fff;
   border-radius: 8px;
   align-content: center;
+  padding: 0.25rem;
+  height: 100%;
+  width: 100%;
 }
 
 .page-main-banner{
@@ -942,6 +951,15 @@ ul li .descr::before {
     border-left: none;  
   }
   .ism-footer-logo-link img {
-    width: 65%;
+    width: 70%;
   } 
+  .ism-footer-iframe2 img{
+    width: 40%;
+    background: #fff;
+    border-radius: 8px;
+    padding: 1rem;
+  }
+  .display-coll{
+    display: block !important;
+  }
 }
