--- a/css/pages/useful-links.css
+++ b/css/pages/useful-links.css
@@ -1,4 +1,4 @@
-
+/* 
 .ism-elem7__box.logo-box {
   min-height: 150px;
   display: -webkit-box;
@@ -30,13 +30,13 @@
   background-clip: padding-box;
   padding: 20px;
   border: 1px solid rgba(0, 0, 0, 0.09);
-  background-color: var(--white);
+  background-color: var(--light-bg);
   margin-bottom: 20px;
   height: -moz-calc(100% - 20px);
   height: -webkit-calc(100% - 20px);
   height: calc(100% - 20px);
   position: relative;
-  /* border: 1px solid #192f60; */
+  border: 1px solid #192f60; 
   border-radius: 8px;
   word-wrap: break-word;
   box-shadow: 0 4px 25px rgba(34, 86, 102, 0.07);
@@ -55,4 +55,28 @@
   text-align: center;
   width: 100%;
   font-weight: 550;
+} */
+
+.ism-logo-box{
+  background: #fff;
+  border: 1px solid #192F60;
+  display: block;
+  text-align: center; 
+  border-radius: 8px;
+  height: 12rem;
+  margin-bottom: 1rem;
+  img{
+    width: -webkit-fill-available;
+        height: 100%;
+        max-height: 120px;
+        margin: 1rem;
+  }
+  .web-link-box{
+    background: #F3F6FD;
+    color: #192f60;
+    padding: 0.5rem;
+    border-radius: 8px;
+    font-size: 0.85rem;
+    font-weight: 500;
+  }
 }
