--- a/style.css
+++ b/style.css
@@ -753,6 +753,9 @@ footer ul li a img {
   padding: 0.75rem 1.25rem;
 }
 
+.header_active__link{
+  border-bottom: 2px solid #192F60;
+}
 
 .timeline-new {
 ul {
